# storefront

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.dev.yaml  docker-compose.yml  postgresql.db.env  pyproject.toml  requirements.in
.devcontainer/: devcontainer.json
config/: celery.py  settings.py  urls.py  wsgi.py
config/settings/: common.py  dev.py  prod.py
core/: admin.py  apps.py  serializers.py  urls.py
core/migrations/: 0001_initial.py
core/signals/: handles.py
core/templates/: home.html
likes/: models.py
likes/migrations/: 0001_initial.py
locustfiles/: browse_products.py
playground/: admin.py  models.py  practice_view.py  serializers.py  tasks.py  urls.py  views.py
playground/migrations/: 0001_initial.py  0002_alter_payment_tx_ref.py
playground/templates/: hello.html  payment_success.html
store/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
store/migrations/: 0001_initial.py  0002_alter_product_title.py  0003_rename_price_product_unit_price.py  0004_add_slug_to_product.py  0005_address_zip.py  0006_auto_20260207_2018.py  0007_alter_collection_options_alter_customer_options_and_more.py  0008_alter_product_description_alter_product_promotions_and_more.py  0009_alter_product_slug.py  0010_alter_product_inventory.py  0011_alter_orderitem_product_review.py  0012_alter_cart_id.py  0013_alter_cartitem_cart_alter_cartitem_unique_together.py  0014_alter_cartitem_quantity.py  0016_alter_order_options.py  (+6 more)
store_custom/: admin.py
tags/: models.py
(+5 files in other folders)
